--- a/css/style.css
+++ b/css/style.css
@@ -164,35 +164,57 @@ input[type=email]:focus {
 
 /*sub layout ----------------------------------------------*/
 /*heder_sub----------------------------------------------*/
+/*header --------------------------------------------*/
 #header_sub {
+  position: relative;
+  top: 0;
+  left: 0;
   width: 100%;
-  border-bottom: 1px solid #ddd;
+  z-index: 10;
+  transition: 0.5s;
+  padding: 0 30px;
+  box-sizing: border-box;
+}
+
+#header_sub.on {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+#header_sub.on .inner {
+  height: 80px;
 }
 
 #header_sub .inner {
-  width: 1180px;
-  height: 80px;
+  width: 100%;
+  height: 120px;
   margin: 0 auto;
   position: relative;
 }
 
 #header_sub .inner > h1 {
   position: absolute;
-  left: 0;
-  bottom: 15px;
+  left: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  letter-spacing: 5px;
 }
 
 #header_sub .inner > h1 > a {
   font: bold 40px/1 "Oswald";
-  color: #444;
   color: #ff6200;
-  letter-spacing: 5px;
 }
 
 #header_sub .inner #gnb {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  left: 250px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#header_sub .inner #gnb::after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 #header_sub .inner #gnb li {
@@ -203,7 +225,7 @@ input[type=email]:focus {
   display: block;
   padding: 14px 40px;
   font: bold 14px/1 "Quicksand";
-  color: #777;
+  color: #111;
 }
 
 #header_sub .inner #gnb li a:hover {
@@ -213,8 +235,9 @@ input[type=email]:focus {
 
 #header_sub .inner .util {
   position: absolute;
-  top: 20px;
-  right: 40px;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #header_sub .inner .util li {
@@ -229,7 +252,7 @@ input[type=email]:focus {
 
 #header_sub .inner .btnCall {
   position: absolute;
-  right: 30px;
+  right: 0;
   top: 50%;
   transform: translateY(-50%);
   width: 20px;
@@ -242,7 +265,7 @@ input[type=email]:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background: #000;
+  background: #fff;
   position: absolute;
   top: 0;
   left: 0;
@@ -254,7 +277,7 @@ input[type=email]:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background: #000;
+  background: #fff;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -265,7 +288,7 @@ input[type=email]:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background: #000;
+  background: #fff;
   position: absolute;
   top: 50%;
   margin-top: -1px;
@@ -339,11 +362,10 @@ input[type=email]:focus {
   padding: 60px 0 60px;
 }
 
-.content .sub_visual {
+.content img {
   width: 100%;
-  height: 250px;
-  background: #bbb;
-  margin-bottom: 100px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .content .inner {
@@ -2134,6 +2156,208 @@ input[type=email]:focus {
     height: 100%;
     top: -20px;
   }
+}
+
+.location {
+  position: relative;
+}
+
+.location .inner .visual .mask {
+  width: 100%;
+  height: 500px;
+  position: relative;
+}
+
+.location .inner .visual .mask .pic {
+  width: 300px;
+  position: absolute;
+  top: 50%;
+  left: 100px;
+  transform: translateY(-50%);
+  z-index: 2;
+  border: 2px solid #111;
+}
+
+.location .inner .visual .mask .pic img {
+  display: block;
+}
+
+.location .inner .visual .mask::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url(../img/location/visual02.jpg) no-repeat bottom/cover;
+  filter: blur(5px);
+}
+
+.location .inner .location {
+  position: relative;
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.location .inner .location::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.location .inner .location .left {
+  width: 50%;
+}
+
+.location .inner .location .left h2 {
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+.location .inner .location .right {
+  position: absolute;
+  right: 100px;
+  bottom: 0;
+  width: 40%;
+  height: 400px;
+  background: #f4f4f4;
+}
+
+.location .banner_con {
+  margin-top: 160px;
+}
+
+.location .banner_con .text_box {
+  max-width: 1180px;
+  margin: 0 auto 50px;
+}
+
+.location .banner_con .text_box h2 {
+  font-size: 3em;
+  margin-bottom: 20px;
+}
+
+.location .banner_con .text_box h2::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 25px;
+  height: 2px;
+  background-color: #ee7b34;
+}
+
+.location .banner {
+  width: 100%;
+  position: relative;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.location .banner::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.location .banner .list li {
+  float: left;
+  width: 240px;
+  height: 240px;
+  opacity: 0.3;
+  transition: 0.5s;
+}
+
+.location .banner .list li:hover {
+  opacity: 1;
+}
+
+.location .banner .list li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.location .banner .list li a img {
+  width: 100%;
+}
+
+.location .banner .prev {
+  position: absolute;
+  left: -120px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: 0.5s;
+  background: rgba(0, 0, 0, 0.8);
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.location .banner .prev i {
+  color: #fff;
+}
+
+.location .banner .next {
+  position: absolute;
+  right: -120px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: 0.5s;
+  background: rgba(0, 0, 0, 0.8);
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+}
+
+.location .banner .next i {
+  color: #fff;
+}
+
+.location .banner:hover .prev {
+  left: 20px;
+  opacity: 1;
+}
+
+.location .banner:hover .next {
+  right: 20px;
+  opacity: 1;
+}
+
+aside {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 5vw;
+  opacity: 0;
+}
+
+aside .pic {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+aside .pic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+aside span {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  font: bold 12px/1 'arial';
+  color: #fff;
+  cursor: pointer;
 }
 
 /*header --------------------------------------------*/
