--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -1,31 +1,54 @@
 
 /*sub layout ----------------------------------------------*/
 /*heder_sub----------------------------------------------*/
+/*header --------------------------------------------*/
 #header_sub {
+	position: relative;
+	top: 0;
+	left: 0;
 	width: 100%;
-	border-bottom: 1px solid #ddd;
+	z-index: 10;
+	transition: 0.5s;
+	padding:0 30px;
+	box-sizing: border-box;
+
+	&.on {
+		background: rgba(0, 0, 0, 0.8);
+
+		.inner {
+			height: 80px;
+		}
+	}
 	.inner {
-		width: 1180px;
-		height: 80px;
+		width: 100%;
+		height: 120px;
 		margin: 0 auto;
 		position: relative;
-		> h1 {
+		>h1 {
 			position: absolute;
-			left: 0;
-			bottom: 15px;
-			
-			> a {
+			left: 30px;
+			top: 50%;
+			transform: translateY(-50%);
+			letter-spacing: 5px;
+
+			>a {
 				font: bold 40px/1 "Oswald";
-				color: #444;
-				color:$pointColor;
-				letter-spacing: 5px;
+				color: $pointColor;
 			}
 		}
+
 		// gnb
 		#gnb {
 			position: absolute;
-			right: 0;
-			bottom: 0;
+			left: 250px;
+			top: 50%;
+			transform: translateY(-50%);
+
+			&::after {
+				content: '';
+				display: block;
+				clear: both;
+			}
 
 			li {
 				float: left;
@@ -34,13 +57,11 @@
 					display: block;
 					padding: 14px 40px;
 					font: bold 14px/1 "Quicksand";
-					color: #777;
-				
+					color: #111;
 
 					&:hover {
 						background: $bgColor;
 						color: #fff;
-						
 					}
 				}
 			}
@@ -48,8 +69,9 @@
 
 		.util {
 			position: absolute;
-			top: 20px;
-			right: 40px;
+			right: 0;
+			top: 50%;
+			transform: translateY(-50%);
 
 			li {
 				float: left;
@@ -65,7 +87,7 @@
 		// 햄버거버튼
 		.btnCall {
 			position: absolute;
-			right: 30px;
+			right: 0;
 			top: 50%;
 			transform: translateY(-50%);
 			width: 20px;
@@ -77,28 +99,30 @@
 				display: block;
 				width: 100%;
 				height: 2px;
-				background: #000;
+				background: #fff;
 				position: absolute;
 				top: 0;
 				left: 0;
 				transition: top 0.5s, transform 0.5s 0.5s;
 			}
+
 			&::after {
 				content: "";
 				display: block;
 				width: 100%;
 				height: 2px;
-				background: #000;
+				background: #fff;
 				position: absolute;
 				bottom: 0;
 				left: 0;
 				transition: bottom 0.5s, transform 0.5s 0.5s;
 			}
+
 			span {
 				display: block;
 				width: 100%;
 				height: 2px;
-				background: #000;
+				background: #fff;
 				position: absolute;
 				top: 50%;
 				margin-top: -1px;
@@ -113,11 +137,13 @@
 					margin-top: -1px;
 					transform: rotate(45deg);
 				}
+
 				&::after {
 					bottom: 50%;
 					margin-bottom: -1px;
 					transform: rotate(-45deg);
 				}
+
 				span {
 					transform: translateX(100%);
 					opacity: 0;
@@ -151,6 +177,7 @@
 					color: #fff;
 					text-align: center;
 				}
+
 				span {
 					font-size: 12px;
 					color: #aaa;
@@ -175,13 +202,11 @@
 .content{
     width:100%; 
     padding:60px 0 60px; 
-
-    .sub_visual{
-        width:100%; 
-        height:250px; 
-        background:#bbb; 
-        margin-bottom:100px; 
-    }
+		img {
+			width:100%;
+			height:100%;
+			object-fit: cover;
+		}
 
     .inner{
         width:1180px; 
@@ -217,7 +242,6 @@
 							background-color: $bgColor;
 						}
         }
-
     }
 }
 
