--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,7 +27,7 @@ $bgColor04 :#f4e1ce;
 @import 'community.scss';
 @import 'join.scss';
 @import 'about.scss';
-
+@import 'location.scss';
 /*header --------------------------------------------*/
 #header {
 	position: fixed;
