--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ input[type=email]:focus {
 
 #header_sub .inner > h1 {
   position: absolute;
-  left: 30px;
+  left: 0;
   top: 50%;
   transform: translateY(-50%);
   letter-spacing: 5px;
@@ -1318,6 +1318,7 @@ input[type=email]:focus {
 }
 
 .join .inner .cont .right table td {
+  position: relative;
   display: block;
   width: 100%;
   border-bottom: 1px solid #bbb;
@@ -1343,12 +1344,15 @@ input[type=email]:focus {
   display: inline-block;
 }
 
-.join .inner .cont .right table td .hobbyTxt,
-.join .inner .cont .right table td .genderTxt {
-  font: 12px/1 'Quicksand';
-  color: hotpink;
-  margin-bottom: 5px;
-  display: none;
+.join .inner .cont .right table td p {
+  position: absolute;
+  font-size: 12px;
+  color: #ff6200;
+  bottom: -20px;
+}
+
+.join .inner .cont .right table td input[type=password] + p {
+  bottom: -30px;
 }
 
 .join .text_box {
