--- a/scss/_sub_layout.scss
+++ b/scss/_sub_layout.scss
@@ -26,7 +26,7 @@
 		position: relative;
 		>h1 {
 			position: absolute;
-			left: 30px;
+			left: 0;
 			top: 50%;
 			transform: translateY(-50%);
 			letter-spacing: 5px;
