--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ input[type=email]:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: #111;
   position: absolute;
   top: 0;
   left: 0;
@@ -277,7 +277,7 @@ input[type=email]:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: #111;
   position: absolute;
   bottom: 0;
   left: 0;
@@ -288,7 +288,7 @@ input[type=email]:focus {
   display: block;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: #111;
   position: absolute;
   top: 50%;
   margin-top: -1px;
@@ -469,9 +469,6 @@ input[type=email]:focus {
   #header_sub .inner {
     width: 100%;
     height: 100px;
-  }
-  #header_sub .inner > h1 {
-    left: 30px;
   }
   #header_sub .inner .menuWeb {
     display: none;
@@ -1500,7 +1497,7 @@ input[type=email]:focus {
     width: 100%;
     border-bottom: 1px solid #bbb;
     padding: 10px 0;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
   }
   .join .inner .cont .right table td input[type=text],
   .join .inner .cont .right table td input[type=password],
@@ -2362,6 +2359,608 @@ aside span {
   font: bold 12px/1 'arial';
   color: #fff;
   cursor: pointer;
+}
+
+.media {
+  padding-top: 0;
+}
+
+.media .visual {
+  position: relative;
+  width: 100%;
+  height: calc(100vh - 120px);
+  background: url(../img/media/visual.jpg) no-repeat center/cover;
+}
+
+.media .visual .text_box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  padding: 80px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.media .visual .text_box h2 {
+  font-size: 3em;
+  line-height: 1.3;
+  font-family: "Josefin Sans", sans-serif;
+  position: relative;
+  top: 20px;
+  z-index: 1;
+  opacity: 0;
+  animation: visual_txt 1s linear forwards 1s;
+}
+
+.media .visual .text_box p {
+  top: 20px;
+  margin-top: 50px;
+  font-size: 25px;
+  position: relative;
+  z-index: 1;
+  opacity: 0;
+  animation: visual_txt 1s linear forwards 1.3s;
+}
+
+.media .visual .text_box::after {
+  content: '';
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0;
+  width: 0%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  background: rgba(255, 255, 255, 0.8);
+  animation: visual_bg 1s linear forwards;
+}
+
+@keyframes visual_bg {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes visual_txt {
+  0% {
+    opacity: 0;
+    top: 20px;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
+
+.media .media_info {
+  padding: 80px 0;
+}
+
+.media .media_info .text_box {
+  position: relative;
+  top: 50px;
+  opacity: 0;
+  transition: 0.5s linear;
+}
+
+.media .media_info .text_box::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.media .media_info .text_box h2 {
+  float: left;
+  width: 30%;
+}
+
+.media .media_info .text_box p {
+  width: 50%;
+  float: left;
+}
+
+.media .media_info .info_list {
+  position: relative;
+  top: 150px;
+  opacity: 0;
+  margin-top: 50px;
+  height: 500px;
+  transition: 0.8s linear;
+}
+
+.media .media_info .info_list::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.media .media_info .info_list article {
+  overflow: hidden;
+  position: relative;
+  float: left;
+}
+
+.media .media_info .info_list article i {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #ee7b34;
+}
+
+.media .media_info .info_list .info1 {
+  width: calc(70% - 20px);
+  margin-right: 10px;
+  height: 100%;
+}
+
+.media .media_info .info_list .info2 {
+  width: 30%;
+  height: 48%;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.media .media_info .info_list .info3 {
+  width: 30%;
+  height: 48%;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+
+.media .media_info.on .text_box {
+  top: 0px;
+  opacity: 1;
+}
+
+.media .media_info.on .info_list {
+  top: 0px;
+  opacity: 1;
+}
+
+.media .media_info.on .info_list article img {
+  animation: imgOpa both cubic-bezier(0.68, 0, 0.265, 1) 1.2s 0.2s;
+}
+
+.media .media_info.on .info_list article i {
+  animation: imgAniLeft both cubic-bezier(0.68, 0, 0.265, 1) 1.2s 0.2s;
+}
+
+@keyframes imgOpa {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  51% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes imgAniLeft {
+  0% {
+    transform: translateX(-101%);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(101%);
+  }
+}
+
+.media .youtube_con {
+  padding-bottom: 80px;
+}
+
+.media .youtube_con .vid_list {
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 50px;
+}
+
+.media .youtube_con .vid_list::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.media .youtube_con .vid_list li {
+  float: left;
+  width: 18%;
+  margin-right: 2.5%;
+  text-align: center;
+}
+
+.media .youtube_con .vid_list li:nth-of-type(1) a {
+  background: #ee7b34;
+}
+
+.media .youtube_con .vid_list li:nth-of-type(2) a {
+  background: #85afbf;
+}
+
+.media .youtube_con .vid_list li:nth-of-type(3) a {
+  background: #8d8dd9;
+}
+
+.media .youtube_con .vid_list li:nth-of-type(4) a {
+  background: #f4e1ce;
+}
+
+.media .youtube_con .vid_list li:nth-of-type(5) a {
+  background: #f3eee5;
+}
+
+.media .youtube_con .vid_list li:last-child {
+  margin-right: 0;
+}
+
+.media .youtube_con .vid_list li a {
+  position: relative;
+  display: block;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin: 0 auto;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Josefin Sans", sans-serif;
+  color: #111;
+  transition: 0.5s;
+  z-index: 1;
+}
+
+.media .youtube_con .vid_list li a:hover {
+  color: #fff;
+}
+
+.media .youtube_con .vid_list li a:hover span:after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  width: 0;
+  height: 0;
+  transform: translateX(-50%);
+  background: #fff;
+  width: 30%;
+  height: 5px;
+  transition: 0.5s;
+}
+
+.media .youtube_con .vid_list li a span {
+  position: absolute;
+  display: block;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  width: 100%;
+  z-index: 1;
+}
+
+.media .youtube_con .vid_list li a span:after {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: -10px;
+  width: 0;
+  height: 0;
+  transform: translateX(-50%);
+  background: #ee7b34;
+  width: 0%;
+  height: 5px;
+  transition: 0.5s;
+}
+
+.media .youtube_con .vCon {
+  margin: 0 -10px;
+}
+
+.media .youtube_con .vCon .vid_con {
+  width: 100%;
+}
+
+.media .youtube_con .vCon .vid_con::after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.media .youtube_con .vCon .vid_con article {
+  overflow: hidden;
+  width: calc(33.3333% - 20px);
+  float: left;
+  margin: 0 10px 40px;
+}
+
+.media .youtube_con .vCon .vid_con article a {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.media .youtube_con .vCon .vid_con article a i {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #ee7b34;
+}
+
+.media .youtube_con .vCon .vid_con article .con {
+  z-index: 1;
+  position: relative;
+  bottom: 50px;
+  margin: 0 auto;
+  width: 80%;
+  height: 150px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  transition: 0.5s;
+}
+
+.media .youtube_con .vCon .vid_con article .con h2 {
+  font-size: 20px;
+  color: #444;
+  margin-bottom: 15px;
+}
+
+.media .youtube_con .vCon .vid_con article .con p {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.media .youtube_con .vCon .vid_con article .con span {
+  position: absolute;
+  bottom: 10px;
+  font-weight: bold;
+  font-size: 16px;
+  color: #ff6200;
+}
+
+.media .youtube_con .vCon .vid_con article:hover .con {
+  bottom: 80px;
+}
+
+.media .youtube_con.on .vCon .vid_con article a img {
+  animation: imgOpa both cubic-bezier(0.68, 0, 0.265, 1) 1.2s 0.2s;
+}
+
+.media .youtube_con.on .vCon .vid_con article a i {
+  animation: imgAniLeft both cubic-bezier(0.68, 0, 0.265, 1) 1.2s 0.2s;
+}
+
+.media .banner {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-color: #111;
+}
+
+.media .banner::after {
+  content: '';
+  display: block;
+  height: 100%;
+  width: 100%;
+  background: url(../img/media/banner.jpg) no-repeat center/cover;
+  opacity: 0.5;
+}
+
+.media .banner .text_box {
+  position: absolute;
+  opacity: 0;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  width: 0;
+  transform: translate(-50%, -50%);
+  width: 40%;
+  padding: 70px 30px;
+  box-sizing: border-box;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.media .banner.on .text_box {
+  animation: banner 1s linear forwards;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+@keyframes banner {
+  0% {
+    top: 80%;
+    opacity: 0;
+  }
+  100% {
+    top: 50%;
+    opacity: 1;
+  }
+}
+
+figure.pop {
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.9);
+  overflow: hidden;
+  padding: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+figure.pop iframe {
+  border: 5px solid #ee7b34;
+}
+
+figure.pop span {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  font-size: 14px;
+  font-weight: 700;
+  color: #fff;
+  padding: 10px;
+  border: 1px solid #ee7b34;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1179px) {
+  .media .visual {
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 100px);
+  }
+  .media .visual .text_box {
+    padding: 40px;
+  }
+  .media .media_info .info_list .info1 {
+    width: 100%;
+    margin-right: 0;
+    height: 50%;
+  }
+  .media .media_info .info_list .info2 {
+    width: 48%;
+    height: 48%;
+    margin: 20px 0 0 0;
+  }
+  .media .media_info .info_list .info3 {
+    width: 48%;
+    height: 48%;
+    margin: 20px 0 0 4%;
+  }
+  .media .youtube_con {
+    padding-bottom: 40px;
+  }
+  .media .youtube_con .vid_list li a {
+    width: 80px;
+    height: 80px;
+    font-size: 14px;
+  }
+  .media .youtube_con .vCon .vid_con article {
+    width: calc(50% - 20px);
+    margin: 0 10px 20px;
+  }
+  .media .youtube_con .vCon .vid_con article .con {
+    bottom: 40px;
+    width: 100%;
+  }
+  .media .banner {
+    height: 300px;
+  }
+  .media .banner .text_box {
+    width: 80%;
+    padding: 50px 10px;
+    font-size: 20px;
+  }
+  figure.pop {
+    padding: 8vw;
+  }
+  figure.pop span {
+    top: 30px;
+    right: 30px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .media .visual {
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 100px);
+  }
+  .media .visual .text_box {
+    width: 80%;
+    padding: 40px 10px;
+  }
+  .media .media_info .text_box h2 {
+    width: 100%;
+  }
+  .media .media_info .text_box p {
+    margin-top: 30px;
+    width: 100%;
+  }
+  .media .youtube_con .vid_list li a {
+    width: 60px;
+    height: 60px;
+    font-size: 14px;
+  }
+  .media .youtube_con .vCon .vid_con article .con h2 {
+    font-size: 16px;
+  }
+  .media .youtube_con .vCon .vid_con article .con p {
+    font-size: 14px;
+  }
+  .media .banner {
+    height: 300px;
+  }
+  .media .banner .text_box {
+    width: 80%;
+    padding: 30px 10px;
+  }
+}
+
+@media screen and (max-width: 539px) {
+  .media .visual {
+    position: relative;
+    width: 100%;
+    height: calc(100vh - 80px);
+  }
+  .media .visual .text_box {
+    width: 80%;
+    padding: 40px 10px;
+  }
+  .media .visual .text_box h2 {
+    font-size: 30px;
+  }
+  .media .youtube_con .vid_list li a {
+    width: 45px;
+    height: 45px;
+    font-size: 12px;
+  }
+  .media .youtube_con .vCon .vid_con article {
+    width: 100%;
+    margin: 0 0 20px;
+  }
+  .media .youtube_con .vCon .vid_con article .con {
+    height: 130px;
+  }
+  .media .youtube_con .vCon .vid_con article .con h2 {
+    font-size: 16px;
+  }
+  .media .youtube_con .vCon .vid_con article .con p {
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  .media .banner {
+    height: 300px;
+  }
+  .media .banner .text_box {
+    width: 80%;
+    padding: 30px 10px;
+  }
 }
 
 /*header --------------------------------------------*/
